<resources>
    <string name="app_name">mohago nocar</string>

    <string name="btn_festival">전국 축제</string>
    <string name="btn_travel">여행 코스</string>

    <string name="festival_name">축제명</string>
    <string name="festival_date">2024.00.00 ~ 2024.00.00</string>
    <string name="festival_duration">%s ~ %s</string>
    <string name="festival_location">축제 위치</string>

    <string name="plan_itinerary">여행일정 등록</string>
    <string name="plan_festival_schedule">지역 축제 일정</string>
    <string name="plan_submit">%d.%d.%s / 여행 등록</string>
    <string name="plan_error">축제 일정을 포함해주세요!</string>

    <string name="plan_departure_arrival">출발 도착 지정</string>
    <string name="plan_depart">출발지 지정</string>
    <string name="plan_arrival">도착지 지정</string>
    <string name="plan_search_name">축제명</string>
    <string name="plan_depart_time">출발 예정 시각</string>
    <string name="plan_arrival_time">도착 예정 시각</string>
    <string name="plan_place_submit">여행 코스 설계 시작</string>

    <string name="plan_add_place_title">여행 장소 추가</string>
    <string name="plan_place_name">여행 장소명</string>
    <string name="plan_place_location">장소 위치</string>
    <string name="plan_finish">선택 완료</string>
    <string name="btn_max_error">너무 많습니다!</string>

    <string name="place_distinguish">장소 구분(음식점/명소)</string>
</resources>