<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_distinguish"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_place_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_place_location"
        android:textColor="@color/plan_text_grey"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>
    <TextView
        android:id="@+id/tv_distinguish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_distinguish"
        android:textColor="@color/plan_text_grey"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_location"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_images"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_top" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/vp_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabGravity="center"
        app:tabBackground="@drawable/dot_indicator"
        app:tabIndicatorHeight="0dp"
        app:tabIndicatorGravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>