<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_itinerary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_itinerary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_festival_schedule_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_festival_schedule"
        android:textColor="@color/plan_text_grey"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_itinerary"
        app:layout_constraintStart_toStartOf="@id/tv_itinerary"/>

    <TextView
        android:id="@+id/tv_festival_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/festival_date"
        android:textColor="@color/plan_text_grey"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/tv_festival_schedule_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_prev"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/btn_month_next"
        android:rotation="180"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/tv_year_month"
        app:layout_constraintEnd_toStartOf="@id/tv_year_month"
        app:layout_constraintBottom_toBottomOf="@id/tv_year_month"/>

    <TextView
        android:id="@+id/tv_year_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_festival_schedule_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_month_next"
        app:layout_constraintTop_toTopOf="@id/tv_year_month"
        app:layout_constraintStart_toEndOf="@id/tv_year_month"
        app:layout_constraintBottom_toBottomOf="@id/tv_year_month"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:numColumns="7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_year_month"
        app:layout_constraintStart_toStartOf="@id/tv_festival_schedule_title"
        app:layout_constraintEnd_toEndOf="@id/tv_festival_schedule"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        /> <!-- 7열짜리 달력 -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_next"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>